<resources>
    <string name="app_name">Inventory_App</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_all_books_order">Delete all books orders</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="empty_title_text">Oh here is really empty.</string>
    <string name="empty_subtitle_text">If you want to order a book click on the right button below.</string>

    <string name="edit_book_title">Book Title</string>
    <string name="edit_book_price">Price</string>
    <string name="decrease_button">-</string>
    <string name="edit_quantity">Quantity</string>
    <string name="increase_button">+</string>
    <string name="edit_supplier_name">Supplier name</string>
    <string name="edit_phone_number">Phone number of supplier</string>
    <string name="button_call">Call the supplier</string>

    <string name="sale_button">Sale</string>
    <string name="delete_successfully">All books were successfully deleted</string>

    <string name="out_of_stock">Sorry, we are out of stock</string>
    <string name="sale">Product sold successfully</string>
    <string name="sale_failed">Failed to sale product</string>

    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit a item</string>

    <string name="editor_update_book_failed">Error with updating</string>
    <string name="editor_update_book_successful">Book is updated.</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book is saved.</string>

    <string name="editor_delete_book_successful">Books deleted.</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="keep_editing">Keep Editing.</string>
    <string name="discard">discard</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="no_phone_app">Phone does not have call app.</string>
    <string name="error_save">Error with saving item</string>

    <string name="item_saved">Item saved</string>
    <string name="error_product_name">Invalid product name</string>
    <string name="error_supplier_name">Invalid supplier name</string>
    <string name="error_phone_number">Invalid supplier phone number</string>
    <string name="error_quantity">Invalid quantity</string>
    <string name="error_price">Invalid price</string>
    <string name="data_cant_save">Please fill correct information.</string>

</resources>
