<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="After you have been finished, click right at the top the button"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edit_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/edit_book_title"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edit_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/edit_book_price"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_button" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/edit_quantity"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_button" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/edit_supplier_name"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="number"
            android:hint="@string/edit_phone_number"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_call" />
    </LinearLayout>
</ScrollView>